<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resumenreporte.ConfirmacionEnvioReporteActivity"
    android:background="@color/first_color"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvConfirmacionEnvioReporteTitulo"
        android:textSize="24sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textColor="@color/light"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvConfirmacionEnvioReporteMensaje"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textColor="@color/light"
        android:layout_marginTop="20dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvConfirmacionEnvioReporteFrase"
                android:textSize="18sp"
                android:textStyle="italic|bold"
                android:gravity="center_horizontal"
                android:textColor="@color/dark"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvConfirmacionEnvioReporteTexto"
                android:textSize="18sp"
                android:textStyle="normal"
                android:gravity="start"
                android:textColor="@color/dark"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="8dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvVolverInicioConfirmacionEnvioReporte"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/ic_home"
                app:tint="@color/first_color_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/cvConfirmacionEnvioReporteBtn"
                android:textStyle="bold"
                android:gravity="center|top"
                android:textColor="@color/dark"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>